--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,9 @@ services:
     container_name: rpi-hub
     ports:
       - "5000:5000"
-    environment:
-      - DB_PATH=/data/links.db
+    env_file:
+      - .env
     volumes:
-      - hub_data:/data
-      - hub_uploads:/app/static/uploads
+      - ./data:/data
+      - ./static/uploads:/app/static/uploads
     restart: unless-stopped
-
-volumes:
-  hub_data:
-  hub_uploads:
